--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/login">
 
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="com.example.groceryguruapp.FirstFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
-
+        android:id="@+id/login"
+        android:name="com.example.groceryguruapp.login"
+        android:label="@string/login_label"
+        tools:layout="@layout/login">
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            android:id="@+id/action_login_to_createAccount"
+            app:destination="@id/createAccount" />
     </fragment>
     <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.example.groceryguruapp.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
-
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
-    </fragment>
+        android:id="@+id/createAccount"
+        android:name="com.example.groceryguruapp.createAccount"
+        android:label="@string/createAccount_label"
+        tools:layout="@layout/create_account"/>
 </navigation>
