Home screen UI progress, added "Create New List" button

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/home">
 
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="com.example.groceryguruapp.FirstFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
-
+        android:id="@+id/home"
+        android:name="com.example.groceryguruapp.Home"
+        android:label="@string/home_label">
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            android:id="@+id/action_home_to_createList"
+            app:destination="@id/createNewListButton"
+            app:launchSingleTop="false"
+            app:popUpTo="@id/createNewListButton"
+            app:popUpToInclusive="false" />
     </fragment>
     <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.example.groceryguruapp.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
-
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
-    </fragment>
+        android:id="@+id/createNewListButton"
+        android:name="com.example.groceryguruapp.CreateList"
+        android:label="@string/create_list_label"
+        tools:layout="@layout/create_list"/>
 </navigation>
