--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -4,22 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".HomePage">
 
     <Button
         android:id="@+id/createNewListButton"
-        android:layout_width="180dp"
-        android:layout_height="182dp"
-        android:background="@drawable/shape_drawable"
-        android:drawableTop="@drawable/ic_add_black_24dp"
-        android:padding="12dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="@string/createNewList"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:background="@drawable/shape_drawable"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.528" />
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
