--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,22 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/home">
+    app:startDestination="@id/homePage">
 
     <fragment
-        android:id="@+id/home"
-        android:name="com.example.groceryguruapp.Home"
-        android:label="@string/home_label">
-        <action
-            android:id="@+id/action_home_to_createList"
-            app:destination="@id/createNewListButton"
-            app:launchSingleTop="false"
-            app:popUpTo="@id/createNewListButton"
-            app:popUpToInclusive="false" />
-    </fragment>
-    <fragment
-        android:id="@+id/createNewListButton"
+        android:id="@+id/createList"
         android:name="com.example.groceryguruapp.CreateList"
-        android:label="@string/create_list_label"
-        tools:layout="@layout/create_list"/>
+        android:label="fragment_create_list"
+        tools:layout="@layout/fragment_create_list" />
+    <fragment
+        android:id="@+id/homePage"
+        android:name="com.example.groceryguruapp.HomePage"
+        android:label="fragment_home_page"
+        tools:layout="@layout/fragment_home_page" >
+        <action
+            android:id="@+id/action_homePage_to_createList"
+            app:destination="@id/createList" />
+    </fragment>
 </navigation>
