--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -15,7 +15,8 @@
 
 
         <!-- Email Label -->
-        com.google.android.material.textfield.TextInputLayout            android:layout_width="match_parent"
+        com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp">
@@ -47,8 +48,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
-            android:padding="12dp"
-            android:text="Login"/>
+            android:text="@string/login"
+            android:padding="12dp" />
 
         <Button
             android:id="@+id/link_signup"
@@ -56,8 +57,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:gravity="center"
-            android:text="No account yet? Create one"
-            android:textSize="16dip" />
+            android:text="@string/createAccount"
+            android:textSize="16sp" />
 
     </LinearLayout>
 </ScrollView>
