--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -52,7 +52,7 @@
             app:destination="@id/login" />
     </fragment>
     <activity
-        android:id="@+id/mainActivity2"
+        android:id="@+id/mainActivity"
         android:name="com.example.groceryguruapp.MainActivity"
         android:label="activity_main"
         tools:layout="@layout/activity_main" />
