--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -7,7 +7,7 @@
     tools:context=".HomePage">
 
     <Button
-        android:id="@+id/createNewListButton"
+        android:id="@+id/create_new_list_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/createNewList"
