--- a/app/src/main/res/layout/create_user_dialog.xml
+++ b/app/src/main/res/layout/create_user_dialog.xml
@@ -11,17 +11,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="276dp"
+        android:layout_centerVertical="true"
+        android:layout_marginBottom="401dp"
         android:text="@string/return_to_login"
-        android:layout_centerInParent="true"
         android:visibility="visible" />
 
     <TextView
         android:id="@+id/on_success_user_create_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/return_to_login_button"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="25dp"
+        android:layout_centerVertical="true"
+        android:layout_marginBottom="205dp"
         android:text="@string/on_success_user_create" />
 </RelativeLayout>
