Checking in some modifications the login page, removed the "display database" button from the login screen, and moved it into a new fragment called "developer homepage" which will be the main place to create/update/delete objects from the database. Started working on the create list page, however we need a way to populate the grocery list items in the db. Will work on the grocery item creation page and work more on the create list page once that's finished.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,8 +17,8 @@
             android:id="@+id/action_login_to_createAccount"
             app:destination="@id/createAccount" />
         <action
-            android:id="@+id/action_login_to_displayDatabaseInformation"
-            app:destination="@id/displayDatabaseInformation" />
+            android:id="@+id/action_login_to_developerHomePage"
+            app:destination="@id/developerHomePage" />
     </fragment>
 
     <fragment
@@ -65,7 +65,31 @@
         android:label="fragment_display_database_information"
         tools:layout="@layout/fragment_display_database_information" >
         <action
-            android:id="@+id/action_displayDatabaseInformation_to_login"
-            app:destination="@id/login" />
+            android:id="@+id/action_displayDatabaseInformation_to_developerHomePage"
+            app:destination="@id/developerHomePage" />
+    </fragment>
+    <fragment
+        android:id="@+id/developerHomePage"
+        android:name="com.example.groceryguruapp.DeveloperHomePage"
+        android:label="fragment_developer_home_page"
+        tools:layout="@layout/fragment_developer_home_page" >
+        <action
+            android:id="@+id/action_developerHomePage_to_displayDatabaseInformation"
+            app:destination="@id/displayDatabaseInformation" />
+        <action
+            android:id="@+id/action_developerHomePage_to_createGroceryItemsPage"
+            app:destination="@id/createGroceryItemsPage" />
+        <action
+            android:id="@+id/action_developerHomePage_to_homePage"
+            app:destination="@id/homePage" />
+    </fragment>
+    <fragment
+        android:id="@+id/createGroceryItemsPage"
+        android:name="com.example.groceryguruapp.CreateGroceryItemsPage"
+        android:label="fragment_create_grocery_items_page"
+        tools:layout="@layout/fragment_create_grocery_items_page" >
+        <action
+            android:id="@+id/action_createGroceryItemsPage_to_developerHomePage"
+            app:destination="@id/developerHomePage" />
     </fragment>
 </navigation>
