Created the Grocery Items Creation page, and added the necessary database calls to create/show all. Still need to create a delete method for items. Also reworked the database a little bit, because the old method wasn't creating the items table as intended. Another thing I figured out was how to set the primary keys to autoincrement.

--- a/app/src/main/res/layout/fragment_create_grocery_items_page.xml
+++ b/app/src/main/res/layout/fragment_create_grocery_items_page.xml
@@ -1,14 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CreateGroceryItemsPage">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <EditText
+        android:id="@+id/enter_grocery_item_name_txt"
+        android:layout_width="273dp"
+        android:layout_height="51dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="@string/create_grocery_item_name_text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.042"
+        android:importantForAutofill="no" />
 
-</FrameLayout>
+    <Spinner
+        android:id="@+id/enter_grocery_item_category_spinner"
+        android:layout_width="273dp"
+        android:layout_height="50dp"
+        android:entries="@array/grocery_item_categories"
+        android:hint="@string/create_grocery_item_category"
+        android:prompt="@string/grocery_item_prompt"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/enter_grocery_item_name_txt"
+        app:layout_constraintVertical_bias="0.038" />
+
+    <Button
+        android:id="@+id/submit_grocery_item_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/create_grocery_item_btn"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.253" />
+
+    <ListView
+        android:id="@+id/grocery_items_view"
+        android:layout_width="413dp"
+        android:layout_height="337dp"
+        app:layout_constraintBottom_toTopOf="@+id/delete_selected_grocery_items_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/submit_grocery_item_btn"
+        app:layout_constraintVertical_bias="0.236" >
+
+    </ListView>
+
+    <Button
+        android:id="@+id/view_grocery_items_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="@string/view_grocery_items"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.976" />
+
+    <Button
+        android:id="@+id/delete_selected_grocery_items_btn"
+        android:layout_width="168dp"
+        android:layout_height="48dp"
+        android:text="@string/delete_selected_items"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.932"
+        app:layout_constraintStart_toEndOf="@+id/view_grocery_items_btn"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.976" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
