Add create profile
Link to home page

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -45,6 +45,9 @@
         <action
             android:id="@+id/action_homePage_to_createList"
             app:destination="@id/createList" />
+        <action
+            android:id="@+id/action_homePage_to_profilePage"
+            app:destination="@id/profilePage" />
     </fragment>
     <fragment
         android:id="@+id/createUserDialog"
@@ -92,4 +95,8 @@
             android:id="@+id/action_createGroceryItemsPage_to_developerHomePage"
             app:destination="@id/developerHomePage" />
     </fragment>
+    <fragment
+        android:id="@+id/profilePage"
+        android:name="cpackage.ProfilePage"
+        android:label="fragment_profile_page" />
 </navigation>
